<resources>
    <string name="app_name">WeatherApp</string>
    <string name="weather_city">Weather City</string>
    <string name="london">London</string>
    <string name="no_status">No status</string>
    <string name="home">Home</string>
    <string name="recents">Recents</string>
    <string name="view_favorites">View Favorites</string>
    <string name="enter_your_city">Enter your City</string>
    <string name="search">Search</string>
    <string name="status">Status</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="wind_speed">Wind Speed</string>
</resources>